package edu.fiuba.algo3.modelo.Cartas;

public class PuntoDeVictoria extends CartaDesarrollo{
    private int TurnoCreacion;

    public PuntoDeVictoria(int turno) {
        super(turno);
    }
}
