package edu.fiuba.algo3.modelo.Contruccion;

public class Carretera {
}
