package edu.fiuba.algo3.modelo.Tablero;

public class Lado {
}
